build/00009/H4P_MQTT_Wildcards_pico.log
Processing pico (platform: https://github.com/maxgerhardt/platform-raspberrypi.git#5b72058658ebaf98045755662bc8b28479bd288b; framework: arduino; board: rpipicow)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/raspberrypi/rpipicow.html
PLATFORM: Raspberry Pi RP2040 (1.14.0+sha.5b72058) > Pico W
HARDWARE: RP2040 133MHz, 256KB RAM, 2MB Flash
DEBUG: Current (blackmagic) External (blackmagic, cmsis-dap, jlink, picoprobe, raspberrypi-swd)
PACKAGES: 
 - framework-arduinopico @ 1.40101.0+sha.9d17f42 
 - tool-picotool-rp2040-earlephilhower @ 5.140200.240929 (14.2.0) 
 - toolchain-rp2040-earlephilhower @ 5.140200.240929 (14.2.0)
Converting H4P_MQTT_Wildcards.ino
Flash size: 2.00MB
Sketch size: 1.50MB
Filesystem size: 0.50MB
PSRAM size: 0.00MB
Maximium Sketch size: 1568768 EEPROM start: 0x101ff000 Filesystem start: 0x1017f000 Filesystem end: 0x101ff000
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ deep+, Compatibility ~ soft
Found 72 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.9+sha.6f2f510
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.7+sha.0ad6c2a
|-- LittleFS @ 0.1.0
|-- WiFi @ 1.0.0
|-- lwIP_CYW43 @ 1
|-- lwIP-Ethernet @ 1
|-- SPI @ 1.0
|-- Updater @ 1.0
|-- MD5Builder @ 1.0.0
|-- LEAmDNS @ 1.2
|-- DNSServer @ 1.1.1
|-- ArduinoOTA @ 1.0
|-- HTTPUpdate @ 1.3
|-- HTTPClient @ 1.2
Building in release mode
Compiling .pio/build/pico/src/H4P_MQTT_Wildcards.ino.cpp.o
In file included from /home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_MQTT_Wildcards.ino:1:
.pio/libdeps/pico/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_MQTT_Wildcards.ino:34:48: error: no matching function for call to 'H4P_WiFi::H4P_WiFi(const char [9], const char [9], const char [8])'
   34 | H4P_WiFi h4wifi("XXXXXXXX","XXXXXXXX","testbed");
      |                                                ^
In file included from .pio/libdeps/pico/H4Plugins/src/H4P_AsyncMQTT.h:34,
                 from .pio/libdeps/pico/H4Plugins/src/H4Plugins.h:10:
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:133:9: note: candidate: 'H4P_WiFi::H4P_WiFi(const std::string&)'
  133 |         H4P_WiFi(const std::string& device=""):
      |         ^~~~~~~~
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:133:9: note:   candidate expects 1 argument, 3 provided
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(const H4P_WiFi&)'
   63 | class H4P_WiFi: public H4Service, public H4AsyncWebServer {
      |       ^~~~~~~~
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 3 provided
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:63:7: note: candidate: 'H4P_WiFi::H4P_WiFi(H4P_WiFi&&)'
.pio/libdeps/pico/H4Plugins/src/H4P_WiFi.h:63:7: note:   candidate expects 1 argument, 3 provided
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_MQTT_Wildcards.ino:35:47: error: no matching function for call to 'H4P_AsyncMQTT::H4P_AsyncMQTT(const char [24])'
   35 | H4P_AsyncMQTT h4mqtt("http://192.168.1.4:1883"); // no username / pword
      |                                               ^
.pio/libdeps/pico/H4Plugins/src/H4P_AsyncMQTT.h:71:9: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(H4P_LWT)'
   71 |         H4P_AsyncMQTT(H4P_LWT lwt={"","",0,false}): _lwt(lwt), H4Service(mqttTag(),H4PE_GVCHANGE|H4PE_VIEWERS|H4PE_BLESINIT){
      |         ^~~~~~~~~~~~~
.pio/libdeps/pico/H4Plugins/src/H4P_AsyncMQTT.h:71:31: note:   no known conversion for argument 1 from 'const char [24]' to 'H4P_LWT'
   71 |         H4P_AsyncMQTT(H4P_LWT lwt={"","",0,false}): _lwt(lwt), H4Service(mqttTag(),H4PE_GVCHANGE|H4PE_VIEWERS|H4PE_BLESINIT){
      |                       ~~~~~~~~^~~~~~~~~~~~~~~~~~~
.pio/libdeps/pico/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(const H4P_AsyncMQTT&)'
   46 | class H4P_AsyncMQTT: public H4Service, public H4AsyncMQTT{
      |       ^~~~~~~~~~~~~
.pio/libdeps/pico/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note:   no known conversion for argument 1 from 'const char [24]' to 'const H4P_AsyncMQTT&'
.pio/libdeps/pico/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note: candidate: 'H4P_AsyncMQTT::H4P_AsyncMQTT(H4P_AsyncMQTT&&)'
.pio/libdeps/pico/H4Plugins/src/H4P_AsyncMQTT.h:46:7: note:   no known conversion for argument 1 from 'const char [24]' to 'H4P_AsyncMQTT&&'
In file included from .pio/libdeps/pico/H4Plugins/src/H4Service.h:33,
                 from .pio/libdeps/pico/H4Plugins/src/H4P_AsyncHTTP.h:32,
                 from .pio/libdeps/pico/H4Plugins/src/H4Plugins.h:9:
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_MQTT_Wildcards.ino: In function 'uint32_t myCallback(std::vector<std::__cxx11::basic_string<char> >)':
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_MQTT_Wildcards.ino:44:41: error: 'string' was not declared in this scope
   44 |       h4mqtt.publishDevice("dealt",CSTR(string(vs.back()+" of "+suit)));
      |                                         ^~~~~~
.pio/libdeps/pico/H4Tools/src/H4Tools.h:60:17: note: in definition of macro 'CSTR'
   60 | #define CSTR(x) x.c_str()
      |                 ^
/home/runner/work/h4plugins/h4plugins/build/pico/src/H4P_MQTT_Wildcards.ino:44:41: note: suggested alternatives:
   44 |       h4mqtt.publishDevice("dealt",CSTR(string(vs.back()+" of "+suit)));
      |                                         ^~~~~~
.pio/libdeps/pico/H4Tools/src/H4Tools.h:60:17: note: in definition of macro 'CSTR'
   60 | #define CSTR(x) x.c_str()
      |                 ^
In file included from /home/runner/.platformio/packages/toolchain-rp2040-earlephilhower/arm-none-eabi/include/c++/14.2.0/string:41,
                 from .pio/libdeps/pico/H4/src/H4.h:88,
                 from .pio/libdeps/pico/H4Plugins/src/H4Service.h:32:
/home/runner/.platformio/packages/toolchain-rp2040-earlephilhower/arm-none-eabi/include/c++/14.2.0/bits/stringfwd.h:77:33: note:   'std::string'
   77 |   typedef basic_string<char>    string;
      |                                 ^~~~~~
/home/runner/.platformio/packages/toolchain-rp2040-earlephilhower/arm-none-eabi/include/c++/14.2.0/string:75:11: note:   'std::pmr::string'
   75 |     using string    = basic_string<char>;
      |           ^~~~~~
*** [.pio/build/pico/src/H4P_MQTT_Wildcards.ino.cpp.o] Error 1
========================== [FAILED] Took 5.06 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
pico           FAILED    00:00:05.061
==================== 1 failed, 0 succeeded in 00:00:05.061 ====================